# whisper-streaming

./: .gitignore  LICENSE  NOTES.md  README.md  pyproject.toml
src/whisper_streaming/: __init__.py  cli.py  core.py  rescoring.py  sources.py
tests/: test.py  test_rescoring.py
