[build-system]
requires = ["hatchling>=1.22.0"]
build-backend = "hatchling.build"

[project]
name = "whisper-streaming"
version = "0.1.0"
description = "Rolling-window streaming transcription helper for OpenAI Whisper"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
dependencies = [
  "openai-whisper>=20231117",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.4",
]

[project.scripts]
whisper-stream = "whisper_streaming.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/whisper_streaming"]

[tool.pytest.ini_options]
testpaths = ["tests"]